cross links added

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   FALSIES SURREAL<br />
                   VERY BLACK
                 </p>
-                <a href="" class="es-colors__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/tusze-do-rzes/maybelline-tusz-do-rzes-the-falsies-surreal-01-very-black" target="new_blank" class="es-colors__link">zobacz produkt</a>
               </div>
               <div class="es-colors__single">
                 <div class="es-colors__tile">
@@ -197,7 +197,7 @@
                   falsies surreal<br />
                   waterproof
                 </p>
-                <a href="" class="es-colors__link">zobacz produkt</a>
+                <a href="" target="new_blank" class="es-colors__link">zobacz produkt</a>
               </div>
               <div class="es-colors__single">
                 <div class="es-colors__tile">
@@ -207,7 +207,7 @@
                   FALSIES LASH LIFT<br />
                   BLACK
                 </p>
-                <a href="" class="es-colors__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/tusze-do-rzes/maybelline-falsies-lash-lift-tusz-do-rzes-black" target="new_blank" class="es-colors__link">zobacz produkt</a>
               </div>
               <div class="es-colors__single">
                 <div class="es-colors__tile">
@@ -217,7 +217,7 @@
                   FALSIES LASH LIFT<br />
                   ultra black
                 </p>
-                <a href="" class="es-colors__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/tusze-do-rzes/maybelline-falsies-lash-lift-tusz-do-rzes-ultra-black" target="new_blank" class="es-colors__link">zobacz produkt</a>
               </div>
               <div class="es-colors__single">
                 <div class="es-colors__tile">
@@ -227,7 +227,7 @@
                   FALSIES LASH LIFT<br />
                   waterproof
                 </p>
-                <a href="" class="es-colors__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/tusze-do-rzes/maybelline-falsies-lash-lift-tusz-do-rzes-wodoodporny-black" target="new_blank" class="es-colors__link">zobacz produkt</a>
               </div>
             </div>
           </div>
@@ -245,7 +245,7 @@
                   z&nbsp;wyjątkowym aplikatorem. Lekka formuła,
                   wzbogacona jest ekstraktem z&nbsp;jagód Goji.
                 </p>
-                <a href="" class="es-cross__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/korektory-do-twarzy/maybelline-the-eraser-instant-anti-age-korektor-neutralizer-06" target="new_blank" class="es-cross__link">zobacz produkt</a>
               </div>
               <div class="es-cross__single">
                 <div class="es-cross__packshot">
@@ -255,7 +255,7 @@
                 <p class="es-cross__desc">
                   Błyszczyk, który nadaje ustom jednocześnie wyjątkowy połysk pozostawiając komfort na ustach.
                 </p>
-                <a href="" class="es-cross__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/blyszczyki/maybelline-lifter-gloss-blyszczyk-do-ust-003-moon" target="new_blank" class="es-cross__link">zobacz produkt</a>
               </div>
               <div class="es-cross__single">
                 <div class="es-cross__packshot">
@@ -265,7 +265,7 @@
                 <p class="es-cross__desc">
                   Długotrwały eyeliner odporny na wodę, rozmazywanie, kruszenie się oraz blaknięcie aż do 24h<sup class="es-cross__sup">3</sup>
                 </p>
-                <a href="" class="es-cross__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/eyelinery/maybelline-tattoo-liner-ink-pen-eyeliner-jet-black" target="new_blank" class="es-cross__link">zobacz produkt</a>
               </div>
             </div>
           </div>
