--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   falsies surreal<br />
                   waterproof
                 </p>
-                <a href="" target="new_blank" class="es-colors__link">zobacz produkt</a>
+                <a href="https://www.cocolita.pl/tusze-do-rzes/maybelline-tusz-do-rzes-the-falsies-surreal-01-very-black" target="new_blank" class="es-colors__link">zobacz produkt</a>
               </div>
               <div class="es-colors__single">
                 <div class="es-colors__tile">
@@ -263,7 +263,7 @@
                 </div>
                 <p class="es-cross__name">EYELINER TATTOO LINER INK PEN</p>
                 <p class="es-cross__desc">
-                  Długotrwały eyeliner odporny na wodę, rozmazywanie, kruszenie się oraz blaknięcie aż do 24h<sup class="es-cross__sup">3</sup>
+                  Długotrwały eyeliner odporny na wodę, rozmazywanie, kruszenie się oraz blaknięcie aż do 24h<sup class="es-cross__sup">3</sup>.
                 </p>
                 <a href="https://www.cocolita.pl/eyelinery/maybelline-tattoo-liner-ink-pen-eyeliner-jet-black" target="new_blank" class="es-cross__link">zobacz produkt</a>
               </div>
